send_to method added to socket (dunno if it works) message.h added (only for a char array) some changes in exceptions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(chat_ssoo_17)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp socket.cpp socket.h message.h)
 
 add_executable(chat_ssoo_17 ${SOURCE_FILES})
